--- a/Etape02/Makefile
+++ b/Etape02/Makefile
@@ -1,5 +1,5 @@
 Test2: Test2a.cpp Model.o Car.o
-	g++ Test2a.cpp Model.o Car.o -o Test2av4
+	g++ Test2a.cpp Model.o Car.o -o Test2a
 
 Model.o: Model.cpp Model.h
 	g++ Model.cpp -c
