Etape 3 fini + adjustments of other things

--- a/Etape02/Makefile
+++ b/Etape02/Makefile
@@ -1,5 +1,5 @@
-Test2: Test2a.cpp Model.o Car.o
-	g++ Test2a.cpp Model.o Car.o -o Test2a
+Test2v520: Test2a.cpp Model.o Car.o
+	g++ Test2a.cpp Model.o Car.o -o Test2av520
 
 Model.o: Model.cpp Model.h
 	g++ Model.cpp -c
