--- a/Etape01/makefile
+++ b/Etape01/makefile
@@ -1,5 +1,8 @@
-Test1v205: Test1.cpp Model.o
-	g++ Test1.cpp Model.o -o Test1v205
+Test1: Test1.cpp Model.o
+	g++ Test1.cpp Model.o -o Test1
 
 Model.o: Model.cpp Model.h
 	g++ Model.cpp -c
+
+clean:
+	rm *.o
