--- a/Etape02/Makefile
+++ b/Etape02/Makefile
@@ -1,5 +1,5 @@
-Test2v520: Test2a.cpp Model.o Car.o
-	g++ Test2a.cpp Model.o Car.o -o Test2av520
+Test2: Test2a.cpp Model.o Car.o
+	g++ Test2a.cpp Model.o Car.o -o Test2
 
 Model.o: Model.cpp Model.h
 	g++ Model.cpp -c
@@ -8,4 +8,4 @@ Car.o: Car.cpp Car.h
 	g++ Car.cpp -c
 
 clean: 
-	rm -f Car.o Model.o
+	rm *.o
