--- a/Etape8b/makefile
+++ b/Etape8b/makefile
@@ -6,7 +6,7 @@ BIN = ./bin
 COMP = g++ -Wall -D DEBUG -I $(INC) -I $(SRC) -I $(OBJ)
 
 
-all : $(BIN) $(OBJ) $(BIN)/Test8a
+all : $(BIN) $(OBJ) $(BIN)/Test8b
 
 $(BIN):
 	mkdir -p $(BIN)
@@ -17,11 +17,11 @@ $(OBJ):
 	@echo "Creation fichier obj"
 
 
-$(BIN)/Test8a: $(OBJ)/Test8a.o $(OBJ)/OptionException.o $(OBJ)/Option.o $(OBJ)/Exception.o $(OBJ)/Car.o $(OBJ)/Model.o $(OBJ)/PasswordException.o $(OBJ)/Client.o $(OBJ)/Person.o $(OBJ)/Actor.o $(OBJ)/XmlFileSerializerException.o $(OBJ)/Garage.o $(OBJ)/Employee.o
-	$(COMP) $(OBJ)/Test8a.o $(OBJ)/OptionException.o $(OBJ)/Option.o $(OBJ)/Exception.o $(OBJ)/Car.o $(OBJ)/Model.o $(OBJ)/PasswordException.o $(OBJ)/Client.o $(OBJ)/Person.o $(OBJ)/Actor.o $(OBJ)/XmlFileSerializerException.o $(OBJ)/Garage.o $(OBJ)/Employee.o -o $(BIN)/Test8a
+$(BIN)/Test8b: $(OBJ)/Test8b.o $(OBJ)/OptionException.o $(OBJ)/Option.o $(OBJ)/Exception.o $(OBJ)/Car.o $(OBJ)/Model.o $(OBJ)/PasswordException.o $(OBJ)/Client.o $(OBJ)/Person.o $(OBJ)/Actor.o $(OBJ)/XmlFileSerializerException.o $(OBJ)/Garage.o $(OBJ)/Employee.o
+	$(COMP) $(OBJ)/Test8b.o $(OBJ)/OptionException.o $(OBJ)/Option.o $(OBJ)/Exception.o $(OBJ)/Car.o $(OBJ)/Model.o $(OBJ)/PasswordException.o $(OBJ)/Client.o $(OBJ)/Person.o $(OBJ)/Actor.o $(OBJ)/XmlFileSerializerException.o $(OBJ)/Garage.o $(OBJ)/Employee.o -o $(BIN)/Test8b
 
-$(OBJ)/Test8a.o: $(SRC)/Test8a.cpp $(INC)/Option.h $(INC)/Car.h $(INC)/Model.h $(INC)/Client.h $(INC)/XmlFileSerializer.hpp $(INC)/Garage.h
-	$(COMP) -c $(SRC)/Test8a.cpp -o $(OBJ)/Test8a.o
+$(OBJ)/Test8b.o: $(SRC)/Test8b.cpp $(INC)/Option.h $(INC)/Car.h $(INC)/Model.h $(INC)/Client.h $(INC)/XmlFileSerializer.hpp $(INC)/Garage.h
+	$(COMP) -c $(SRC)/Test8b.cpp -o $(OBJ)/Test8b.o
 
 $(OBJ)/Option.o: $(SRC)/Option.cpp $(INC)/Option.h $(INC)/OptionException.h
 	$(COMP) -c $(SRC)/Option.cpp -o $(OBJ)/Option.o
@@ -62,4 +62,4 @@ $(OBJ)/XmlFileSerializerException.o: $(SRC)/XmlFileSerializerException.cpp $(INC
 clean:
 	rm -f $(OBJ)/*.o
 clobber: clean
-	rm -f $(BIN)/Test8a
+	rm -f $(BIN)/Test8b
